started with frontend for homepage

--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -2,3 +2,6 @@
 @import "alert";
 @import "avatar";
 @import "navbar";
+@import "cocktail_card";
+@import "header_home";
+@import "button-which-cocktail";
