--- a/app/views/cocktails/new.html.erb
+++ b/app/views/cocktails/new.html.erb
@@ -1,5 +1,5 @@
-<%= simple_form_for [@cocktail, ] do |f| %>
+<%= simple_form_for [@cocktail] do |f| %>
   <%= f.input :name %>
-  <%= f.submit "create a cocktail" class: 'btn btn-success' %>
+  <%= f.submit "create a cocktail", class: 'btn btn-success' %>
 <% end %>
 
